fixed blog grammar issue and added white space at the bottom of blogp1.html

--- a/assets/css/blogstyle.css
+++ b/assets/css/blogstyle.css
@@ -139,6 +139,7 @@ main p, main li{
 
 #p4{
   margin-top: var(--default-margin);
+  margin-bottom: 100px;
 }
 
 #li1{
